2007-11-08 [paul]	3.0.2cvs127

	* src/textview.c
		MAEMO: fix failure of loading images inline
		MAEMO: fix bug 1349, 'Emails still skip to end
		when opened (in certain circumstances)...'

2007-11-07 [colin]	3.0.2cvs126

	* src/toolbar.c
		Migrate from A_SYL_ACTIONS to A_CLAWS_ACTIONS

2007-11-07 [colin]	3.0.2cvs125

	* src/toolbar.c
		Re-change the string occurence of A_CLAWS_ACTIONS
		to A_SYL_ACTIONS, to prevent parse errors of the
		toolbar_*.xml files

2007-11-07 [colin]	3.0.2cvs124

	* src/mimeview.c
	* src/prefs_common.c
	* src/prefs_common.h
	* manual/advanced.xml
		Add an hidden pref, 'save_parts_readwrite';
		completes 3.0.2cvs35

2007-11-07 [paul]	3.0.2cvs123

	* src/prefs_toolbar.c
	* src/toolbar.c
	* src/toolbar.h
		rename ToolbarSylpheedActions to ToolbarClawsActions
		rename A_SYL_ACTIONS to A_CLAWS_ACTIONS

2007-11-07 [paul]	3.0.2cvs122

	* src/toolbar.c
		MAEMO: remove tooltips

2007-11-07 [colin]	3.0.2cvs121

	* src/plugins/pgpinline/pgpinline.c
		Fix bug 1377, 'unspecific errors on 
		signature checking'. Fix trimming of
		UTF8 data.

2007-11-06 [iwkse]	3.0.2cvs120

	* src/prefs_summary_open.c
		yet a string change

2007-11-06 [paul]	3.0.2cvs119

	* tools/Makefile.am
	* tools/README
	* tools/csv2addressbook.pl
		add a new script that imports a CSV formatted
		address book. Becky and Thunderbird address
		book are currently supported.

2007-11-05 [colin]	3.0.2cvs118

	* src/imap.c
		Fix deletion 

2007-11-05 [iwkse]	3.0.2cvs117

	* src/prefs_summary_open.c
		String changes

2007-11-04 [paul]	3.0.2cvs116

	* src/addressbook_foldersel.c
		fix gtk critical warning
		Patch by Pawel Pekala

2007-11-04 [paul]	3.0.2cvs115

	* tools/README
	* tools/claws-mail-compose-insert-files.pl
		add --bcc and uri_escape() everything

2007-11-04 [paul]	3.0.2cvs114

	* src/gtk/gtkutils.c
		gtkut_stock_with_text_button_set_create(): set
		GTK_CAN_DEFAULT on buttons 2 and 3

2007-11-03 [paul]	3.0.2cvs113

	* src/common/utils.c